--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9787234042553191" branch-rate="0.9027777777777778" lines-covered="184" lines-valid="188" branches-covered="65" branches-valid="72" complexity="2.2" version="2.1.1" timestamp="1442495658105">
+<coverage line-rate="0.9788359788359788" branch-rate="0.8947368421052632" lines-covered="185" lines-valid="189" branches-covered="68" branches-valid="76" complexity="2.2285714285714286" version="2.1.1" timestamp="1442496068608">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.9787234042553191" branch-rate="0.9027777777777778" complexity="2.2">
+		<package name="com.tw.biblioteca" line-rate="0.9788359788359788" branch-rate="0.8947368421052632" complexity="2.2285714285714286">
 			<classes>
 				<class name="com.tw.biblioteca.Authenticator" filename="com/tw/biblioteca/Authenticator.java" line-rate="1.0" branch-rate="1.0" complexity="2.5">
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="7" hits="15" branch="false"/>
-								<line number="9" hits="15" branch="false"/>
-								<line number="10" hits="15" branch="false"/>
-								<line number="11" hits="15" branch="false"/>
-								<line number="12" hits="15" branch="false"/>
-								<line number="13" hits="15" branch="false"/>
+								<line number="7" hits="16" branch="false"/>
+								<line number="9" hits="16" branch="false"/>
+								<line number="10" hits="16" branch="false"/>
+								<line number="11" hits="16" branch="false"/>
+								<line number="12" hits="16" branch="false"/>
+								<line number="13" hits="16" branch="false"/>
 							</lines>
 						</method>
 						<method name="isValid" signature="(Ljava/lang/String;Ljava/lang/String;)Lcom/tw/biblioteca/User;" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -35,12 +35,12 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="7" hits="15" branch="false"/>
-						<line number="9" hits="15" branch="false"/>
-						<line number="10" hits="15" branch="false"/>
-						<line number="11" hits="15" branch="false"/>
-						<line number="12" hits="15" branch="false"/>
-						<line number="13" hits="15" branch="false"/>
+						<line number="7" hits="16" branch="false"/>
+						<line number="9" hits="16" branch="false"/>
+						<line number="10" hits="16" branch="false"/>
+						<line number="11" hits="16" branch="false"/>
+						<line number="12" hits="16" branch="false"/>
+						<line number="13" hits="16" branch="false"/>
 						<line number="16" hits="5" branch="false"/>
 						<line number="17" hits="5" branch="true" condition-coverage="100% (4/4)">
 							<conditions>
@@ -102,11 +102,11 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="9" hits="124" branch="false"/>
-								<line number="10" hits="124" branch="false"/>
-								<line number="11" hits="124" branch="false"/>
-								<line number="12" hits="124" branch="false"/>
-								<line number="13" hits="124" branch="false"/>
+								<line number="9" hits="127" branch="false"/>
+								<line number="10" hits="127" branch="false"/>
+								<line number="11" hits="127" branch="false"/>
+								<line number="12" hits="127" branch="false"/>
+								<line number="13" hits="127" branch="false"/>
 							</lines>
 						</method>
 						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -146,11 +146,11 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="9" hits="124" branch="false"/>
-						<line number="10" hits="124" branch="false"/>
-						<line number="11" hits="124" branch="false"/>
-						<line number="12" hits="124" branch="false"/>
-						<line number="13" hits="124" branch="false"/>
+						<line number="9" hits="127" branch="false"/>
+						<line number="10" hits="127" branch="false"/>
+						<line number="11" hits="127" branch="false"/>
+						<line number="12" hits="127" branch="false"/>
+						<line number="13" hits="127" branch="false"/>
 						<line number="16" hits="12" branch="false"/>
 						<line number="17" hits="12" branch="false"/>
 						<line number="21" hits="24" branch="true" condition-coverage="100% (2/2)">
@@ -180,17 +180,17 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="7" hits="35" branch="false"/>
-								<line number="8" hits="35" branch="false"/>
-								<line number="9" hits="35" branch="false"/>
-								<line number="11" hits="35" branch="false"/>
-								<line number="12" hits="35" branch="false"/>
-								<line number="13" hits="35" branch="false"/>
-								<line number="14" hits="35" branch="false"/>
-								<line number="16" hits="35" branch="false"/>
-								<line number="17" hits="35" branch="false"/>
-								<line number="18" hits="35" branch="false"/>
-								<line number="19" hits="35" branch="false"/>
+								<line number="7" hits="36" branch="false"/>
+								<line number="8" hits="36" branch="false"/>
+								<line number="9" hits="36" branch="false"/>
+								<line number="11" hits="36" branch="false"/>
+								<line number="12" hits="36" branch="false"/>
+								<line number="13" hits="36" branch="false"/>
+								<line number="14" hits="36" branch="false"/>
+								<line number="16" hits="36" branch="false"/>
+								<line number="17" hits="36" branch="false"/>
+								<line number="18" hits="36" branch="false"/>
+								<line number="19" hits="36" branch="false"/>
 							</lines>
 						</method>
 						<method name="addBook" signature="(Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -258,17 +258,17 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="7" hits="35" branch="false"/>
-						<line number="8" hits="35" branch="false"/>
-						<line number="9" hits="35" branch="false"/>
-						<line number="11" hits="35" branch="false"/>
-						<line number="12" hits="35" branch="false"/>
-						<line number="13" hits="35" branch="false"/>
-						<line number="14" hits="35" branch="false"/>
-						<line number="16" hits="35" branch="false"/>
-						<line number="17" hits="35" branch="false"/>
-						<line number="18" hits="35" branch="false"/>
-						<line number="19" hits="35" branch="false"/>
+						<line number="7" hits="36" branch="false"/>
+						<line number="8" hits="36" branch="false"/>
+						<line number="9" hits="36" branch="false"/>
+						<line number="11" hits="36" branch="false"/>
+						<line number="12" hits="36" branch="false"/>
+						<line number="13" hits="36" branch="false"/>
+						<line number="14" hits="36" branch="false"/>
+						<line number="16" hits="36" branch="false"/>
+						<line number="17" hits="36" branch="false"/>
+						<line number="18" hits="36" branch="false"/>
+						<line number="19" hits="36" branch="false"/>
 						<line number="22" hits="4" branch="false"/>
 						<line number="23" hits="15" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
@@ -488,12 +488,12 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="10" hits="120" branch="false"/>
-								<line number="11" hits="120" branch="false"/>
-								<line number="12" hits="120" branch="false"/>
-								<line number="13" hits="120" branch="false"/>
-								<line number="14" hits="120" branch="false"/>
-								<line number="15" hits="120" branch="false"/>
+								<line number="10" hits="123" branch="false"/>
+								<line number="11" hits="123" branch="false"/>
+								<line number="12" hits="123" branch="false"/>
+								<line number="13" hits="123" branch="false"/>
+								<line number="14" hits="123" branch="false"/>
+								<line number="15" hits="123" branch="false"/>
 							</lines>
 						</method>
 						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -533,12 +533,12 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="10" hits="120" branch="false"/>
-						<line number="11" hits="120" branch="false"/>
-						<line number="12" hits="120" branch="false"/>
-						<line number="13" hits="120" branch="false"/>
-						<line number="14" hits="120" branch="false"/>
-						<line number="15" hits="120" branch="false"/>
+						<line number="10" hits="123" branch="false"/>
+						<line number="11" hits="123" branch="false"/>
+						<line number="12" hits="123" branch="false"/>
+						<line number="13" hits="123" branch="false"/>
+						<line number="14" hits="123" branch="false"/>
+						<line number="15" hits="123" branch="false"/>
 						<line number="18" hits="6" branch="false"/>
 						<line number="19" hits="6" branch="false"/>
 						<line number="23" hits="16" branch="true" condition-coverage="100% (2/2)">
@@ -564,21 +564,21 @@
 						<line number="38" hits="4" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.TaskDispatcher" filename="com/tw/biblioteca/TaskDispatcher.java" line-rate="1.0" branch-rate="0.7941176470588235" complexity="5.5">
+				<class name="com.tw.biblioteca.TaskDispatcher" filename="com/tw/biblioteca/TaskDispatcher.java" line-rate="1.0" branch-rate="0.7894736842105263" complexity="6.0">
 					<methods>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Lcom/tw/biblioteca/Library;Lcom/tw/biblioteca/Authenticator;Lcom/tw/biblioteca/User;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="12" hits="12" branch="false"/>
-								<line number="13" hits="12" branch="false"/>
-								<line number="14" hits="12" branch="false"/>
-								<line number="15" hits="12" branch="false"/>
-								<line number="16" hits="12" branch="false"/>
-								<line number="17" hits="12" branch="false"/>
+								<line number="12" hits="13" branch="false"/>
+								<line number="13" hits="13" branch="false"/>
+								<line number="14" hits="13" branch="false"/>
+								<line number="15" hits="13" branch="false"/>
+								<line number="16" hits="13" branch="false"/>
+								<line number="17" hits="13" branch="false"/>
 							</lines>
 						</method>
-						<method name="dispatch" signature="()Lcom/tw/biblioteca/User;" line-rate="1.0" branch-rate="0.7941176470588235" complexity="0">
+						<method name="dispatch" signature="()Lcom/tw/biblioteca/User;" line-rate="1.0" branch-rate="0.7894736842105263" complexity="0">
 							<lines>
-								<line number="21" hits="12" branch="true" condition-coverage="76% (23/30)">
+								<line number="21" hits="13" branch="true" condition-coverage="76% (26/34)">
 									<conditions>
 										<condition number="0" type="jump" coverage="50%"/>
 										<condition number="1" type="jump" coverage="50%"/>
@@ -587,6 +587,7 @@
 										<condition number="4" type="jump" coverage="50%"/>
 										<condition number="5" type="jump" coverage="50%"/>
 										<condition number="6" type="jump" coverage="50%"/>
+										<condition number="7" type="jump" coverage="50%"/>
 										<condition number="0" type="switch" coverage="100%"/>
 										<condition number="1" type="switch" coverage="100%"/>
 									</conditions>
@@ -618,18 +619,19 @@
 								<line number="51" hits="2" branch="false"/>
 								<line number="52" hits="2" branch="false"/>
 								<line number="54" hits="1" branch="false"/>
-								<line number="56" hits="10" branch="false"/>
+								<line number="56" hits="2" branch="false"/>
+								<line number="58" hits="11" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="12" hits="12" branch="false"/>
-						<line number="13" hits="12" branch="false"/>
-						<line number="14" hits="12" branch="false"/>
-						<line number="15" hits="12" branch="false"/>
-						<line number="16" hits="12" branch="false"/>
-						<line number="17" hits="12" branch="false"/>
-						<line number="21" hits="12" branch="true" condition-coverage="76% (23/30)">
+						<line number="12" hits="13" branch="false"/>
+						<line number="13" hits="13" branch="false"/>
+						<line number="14" hits="13" branch="false"/>
+						<line number="15" hits="13" branch="false"/>
+						<line number="16" hits="13" branch="false"/>
+						<line number="17" hits="13" branch="false"/>
+						<line number="21" hits="13" branch="true" condition-coverage="76% (26/34)">
 							<conditions>
 								<condition number="0" type="jump" coverage="50%"/>
 								<condition number="1" type="jump" coverage="50%"/>
@@ -638,6 +640,7 @@
 								<condition number="4" type="jump" coverage="50%"/>
 								<condition number="5" type="jump" coverage="50%"/>
 								<condition number="6" type="jump" coverage="50%"/>
+								<condition number="7" type="jump" coverage="50%"/>
 								<condition number="0" type="switch" coverage="100%"/>
 								<condition number="1" type="switch" coverage="100%"/>
 							</conditions>
@@ -669,27 +672,28 @@
 						<line number="51" hits="2" branch="false"/>
 						<line number="52" hits="2" branch="false"/>
 						<line number="54" hits="1" branch="false"/>
-						<line number="56" hits="10" branch="false"/>
+						<line number="56" hits="2" branch="false"/>
+						<line number="58" hits="11" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.User" filename="com/tw/biblioteca/User.java" line-rate="1.0" branch-rate="1.0" complexity="2.2">
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="11" hits="12" branch="false"/>
-								<line number="12" hits="12" branch="false"/>
-								<line number="13" hits="12" branch="false"/>
-								<line number="14" hits="12" branch="false"/>
-								<line number="15" hits="12" branch="false"/>
+								<line number="11" hits="14" branch="false"/>
+								<line number="12" hits="14" branch="false"/>
+								<line number="13" hits="14" branch="false"/>
+								<line number="14" hits="14" branch="false"/>
+								<line number="15" hits="14" branch="false"/>
 							</lines>
 						</method>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="17" hits="62" branch="false"/>
-								<line number="18" hits="62" branch="false"/>
-								<line number="19" hits="62" branch="false"/>
-								<line number="20" hits="62" branch="false"/>
-								<line number="21" hits="62" branch="false"/>
+								<line number="17" hits="66" branch="false"/>
+								<line number="18" hits="66" branch="false"/>
+								<line number="19" hits="66" branch="false"/>
+								<line number="20" hits="66" branch="false"/>
+								<line number="21" hits="66" branch="false"/>
 							</lines>
 						</method>
 						<method name="checkPassword" signature="(Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -699,25 +703,25 @@
 						</method>
 						<method name="equals" signature="(Ljava/lang/Object;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="25" hits="25" branch="true" condition-coverage="100% (2/2)">
+								<line number="25" hits="26" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
 								<line number="26" hits="1" branch="false"/>
-								<line number="28" hits="24" branch="true" condition-coverage="100% (2/2)">
+								<line number="28" hits="25" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
 								<line number="29" hits="1" branch="false"/>
-								<line number="30" hits="23" branch="false"/>
-								<line number="31" hits="23" branch="true" condition-coverage="100% (2/2)">
+								<line number="30" hits="24" branch="false"/>
+								<line number="31" hits="24" branch="true" condition-coverage="100% (2/2)">
 									<conditions>
 										<condition number="0" type="jump" coverage="100%"/>
 									</conditions>
 								</line>
-								<line number="32" hits="13" branch="false"/>
+								<line number="32" hits="14" branch="false"/>
 								<line number="34" hits="10" branch="false"/>
 							</lines>
 						</method>
@@ -728,35 +732,35 @@
 						</method>
 					</methods>
 					<lines>
-						<line number="11" hits="12" branch="false"/>
-						<line number="12" hits="12" branch="false"/>
-						<line number="13" hits="12" branch="false"/>
-						<line number="14" hits="12" branch="false"/>
-						<line number="15" hits="12" branch="false"/>
-						<line number="17" hits="62" branch="false"/>
-						<line number="18" hits="62" branch="false"/>
-						<line number="19" hits="62" branch="false"/>
-						<line number="20" hits="62" branch="false"/>
-						<line number="21" hits="62" branch="false"/>
-						<line number="25" hits="25" branch="true" condition-coverage="100% (2/2)">
+						<line number="11" hits="14" branch="false"/>
+						<line number="12" hits="14" branch="false"/>
+						<line number="13" hits="14" branch="false"/>
+						<line number="14" hits="14" branch="false"/>
+						<line number="15" hits="14" branch="false"/>
+						<line number="17" hits="66" branch="false"/>
+						<line number="18" hits="66" branch="false"/>
+						<line number="19" hits="66" branch="false"/>
+						<line number="20" hits="66" branch="false"/>
+						<line number="21" hits="66" branch="false"/>
+						<line number="25" hits="26" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
 						<line number="26" hits="1" branch="false"/>
-						<line number="28" hits="24" branch="true" condition-coverage="100% (2/2)">
+						<line number="28" hits="25" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
 						<line number="29" hits="1" branch="false"/>
-						<line number="30" hits="23" branch="false"/>
-						<line number="31" hits="23" branch="true" condition-coverage="100% (2/2)">
+						<line number="30" hits="24" branch="false"/>
+						<line number="31" hits="24" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
 							</conditions>
 						</line>
-						<line number="32" hits="13" branch="false"/>
+						<line number="32" hits="14" branch="false"/>
 						<line number="34" hits="10" branch="false"/>
 						<line number="38" hits="6" branch="false"/>
 						<line number="42" hits="9" branch="false"/>
