added new option in menu for admin to view book details

--- a/reports/coverage.xml
+++ b/reports/coverage.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.9788359788359788" branch-rate="0.8947368421052632" lines-covered="185" lines-valid="189" branches-covered="68" branches-valid="76" complexity="2.2285714285714286" version="2.1.1" timestamp="1442496068608">
+<coverage line-rate="0.9789473684210527" branch-rate="0.8974358974358975" lines-covered="186" lines-valid="190" branches-covered="70" branches-valid="78" complexity="2.257142857142857" version="2.1.1" timestamp="1442497221265">
 	<sources>
 		<source>src</source>
 	</sources>
 	<packages>
-		<package name="com.tw.biblioteca" line-rate="0.9788359788359788" branch-rate="0.8947368421052632" complexity="2.2285714285714286">
+		<package name="com.tw.biblioteca" line-rate="0.9789473684210527" branch-rate="0.8974358974358975" complexity="2.257142857142857">
 			<classes>
 				<class name="com.tw.biblioteca.Authenticator" filename="com/tw/biblioteca/Authenticator.java" line-rate="1.0" branch-rate="1.0" complexity="2.5">
 					<methods>
@@ -52,13 +52,12 @@
 						<line number="20" hits="2" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.BibliotecaApp" filename="com/tw/biblioteca/BibliotecaApp.java" line-rate="0.7142857142857143" branch-rate="1.0" complexity="1.5">
+				<class name="com.tw.biblioteca.BibliotecaApp" filename="com/tw/biblioteca/BibliotecaApp.java" line-rate="0.6923076923076923" branch-rate="1.0" complexity="1.5">
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
 								<line number="4" hits="1" branch="false"/>
 								<line number="5" hits="1" branch="false"/>
-								<line number="6" hits="1" branch="false"/>
 								<line number="7" hits="1" branch="false"/>
 								<line number="8" hits="1" branch="false"/>
 							</lines>
@@ -84,7 +83,6 @@
 					<lines>
 						<line number="4" hits="1" branch="false"/>
 						<line number="5" hits="1" branch="false"/>
-						<line number="6" hits="1" branch="false"/>
 						<line number="7" hits="1" branch="false"/>
 						<line number="8" hits="1" branch="false"/>
 						<line number="11" hits="0" branch="false"/>
@@ -442,46 +440,58 @@
 						<line number="20" hits="3" branch="false"/>
 					</lines>
 				</class>
-				<class name="com.tw.biblioteca.Menu" filename="com/tw/biblioteca/Menu.java" line-rate="1.0" branch-rate="1.0" complexity="1.0">
+				<class name="com.tw.biblioteca.Menu" filename="com/tw/biblioteca/Menu.java" line-rate="1.0" branch-rate="1.0" complexity="1.5">
 					<methods>
-						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
+						<method name="&lt;init&gt;" signature="(Lcom/tw/biblioteca/User;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="10" hits="3" branch="false"/>
-								<line number="12" hits="3" branch="false"/>
-								<line number="13" hits="3" branch="false"/>
-								<line number="14" hits="3" branch="false"/>
-								<line number="15" hits="3" branch="false"/>
-								<line number="16" hits="3" branch="false"/>
-								<line number="17" hits="3" branch="false"/>
-								<line number="18" hits="3" branch="false"/>
-								<line number="19" hits="3" branch="false"/>
-								<line number="20" hits="3" branch="false"/>
-								<line number="21" hits="3" branch="false"/>
+								<line number="10" hits="4" branch="false"/>
+								<line number="12" hits="4" branch="false"/>
+								<line number="13" hits="4" branch="false"/>
+								<line number="14" hits="4" branch="false"/>
+								<line number="15" hits="4" branch="false"/>
+								<line number="16" hits="4" branch="false"/>
+								<line number="17" hits="4" branch="false"/>
+								<line number="18" hits="4" branch="false"/>
+								<line number="19" hits="4" branch="false"/>
+								<line number="20" hits="4" branch="false"/>
+								<line number="22" hits="4" branch="true" condition-coverage="100% (2/2)">
+									<conditions>
+										<condition number="0" type="jump" coverage="100%"/>
+									</conditions>
+								</line>
+								<line number="23" hits="1" branch="false"/>
+								<line number="25" hits="4" branch="false"/>
 							</lines>
 						</method>
 						<method name="chosenOption" signature="()Ljava/lang/String;" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="24" hits="3" branch="false"/>
-								<line number="25" hits="3" branch="false"/>
-								<line number="26" hits="3" branch="false"/>
+								<line number="28" hits="4" branch="false"/>
+								<line number="29" hits="4" branch="false"/>
+								<line number="30" hits="4" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="10" hits="3" branch="false"/>
-						<line number="12" hits="3" branch="false"/>
-						<line number="13" hits="3" branch="false"/>
-						<line number="14" hits="3" branch="false"/>
-						<line number="15" hits="3" branch="false"/>
-						<line number="16" hits="3" branch="false"/>
-						<line number="17" hits="3" branch="false"/>
-						<line number="18" hits="3" branch="false"/>
-						<line number="19" hits="3" branch="false"/>
-						<line number="20" hits="3" branch="false"/>
-						<line number="21" hits="3" branch="false"/>
-						<line number="24" hits="3" branch="false"/>
-						<line number="25" hits="3" branch="false"/>
-						<line number="26" hits="3" branch="false"/>
+						<line number="10" hits="4" branch="false"/>
+						<line number="12" hits="4" branch="false"/>
+						<line number="13" hits="4" branch="false"/>
+						<line number="14" hits="4" branch="false"/>
+						<line number="15" hits="4" branch="false"/>
+						<line number="16" hits="4" branch="false"/>
+						<line number="17" hits="4" branch="false"/>
+						<line number="18" hits="4" branch="false"/>
+						<line number="19" hits="4" branch="false"/>
+						<line number="20" hits="4" branch="false"/>
+						<line number="22" hits="4" branch="true" condition-coverage="100% (2/2)">
+							<conditions>
+								<condition number="0" type="jump" coverage="100%"/>
+							</conditions>
+						</line>
+						<line number="23" hits="1" branch="false"/>
+						<line number="25" hits="4" branch="false"/>
+						<line number="28" hits="4" branch="false"/>
+						<line number="29" hits="4" branch="false"/>
+						<line number="30" hits="4" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.Movie" filename="com/tw/biblioteca/Movie.java" line-rate="1.0" branch-rate="1.0" complexity="2.5">
@@ -680,20 +690,20 @@
 					<methods>
 						<method name="&lt;init&gt;" signature="()V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="11" hits="14" branch="false"/>
-								<line number="12" hits="14" branch="false"/>
-								<line number="13" hits="14" branch="false"/>
-								<line number="14" hits="14" branch="false"/>
-								<line number="15" hits="14" branch="false"/>
+								<line number="11" hits="16" branch="false"/>
+								<line number="12" hits="16" branch="false"/>
+								<line number="13" hits="16" branch="false"/>
+								<line number="14" hits="16" branch="false"/>
+								<line number="15" hits="16" branch="false"/>
 							</lines>
 						</method>
 						<method name="&lt;init&gt;" signature="(Ljava/lang/String;Ljava/lang/String;Ljava/lang/String;)V" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="17" hits="66" branch="false"/>
-								<line number="18" hits="66" branch="false"/>
-								<line number="19" hits="66" branch="false"/>
-								<line number="20" hits="66" branch="false"/>
-								<line number="21" hits="66" branch="false"/>
+								<line number="17" hits="67" branch="false"/>
+								<line number="18" hits="67" branch="false"/>
+								<line number="19" hits="67" branch="false"/>
+								<line number="20" hits="67" branch="false"/>
+								<line number="21" hits="67" branch="false"/>
 							</lines>
 						</method>
 						<method name="checkPassword" signature="(Ljava/lang/String;)Z" line-rate="1.0" branch-rate="1.0" complexity="0">
@@ -727,21 +737,21 @@
 						</method>
 						<method name="role" signature="()Ljava/lang/String;" line-rate="1.0" branch-rate="1.0" complexity="0">
 							<lines>
-								<line number="42" hits="9" branch="false"/>
+								<line number="42" hits="13" branch="false"/>
 							</lines>
 						</method>
 					</methods>
 					<lines>
-						<line number="11" hits="14" branch="false"/>
-						<line number="12" hits="14" branch="false"/>
-						<line number="13" hits="14" branch="false"/>
-						<line number="14" hits="14" branch="false"/>
-						<line number="15" hits="14" branch="false"/>
-						<line number="17" hits="66" branch="false"/>
-						<line number="18" hits="66" branch="false"/>
-						<line number="19" hits="66" branch="false"/>
-						<line number="20" hits="66" branch="false"/>
-						<line number="21" hits="66" branch="false"/>
+						<line number="11" hits="16" branch="false"/>
+						<line number="12" hits="16" branch="false"/>
+						<line number="13" hits="16" branch="false"/>
+						<line number="14" hits="16" branch="false"/>
+						<line number="15" hits="16" branch="false"/>
+						<line number="17" hits="67" branch="false"/>
+						<line number="18" hits="67" branch="false"/>
+						<line number="19" hits="67" branch="false"/>
+						<line number="20" hits="67" branch="false"/>
+						<line number="21" hits="67" branch="false"/>
 						<line number="25" hits="26" branch="true" condition-coverage="100% (2/2)">
 							<conditions>
 								<condition number="0" type="jump" coverage="100%"/>
@@ -763,7 +773,7 @@
 						<line number="32" hits="14" branch="false"/>
 						<line number="34" hits="10" branch="false"/>
 						<line number="38" hits="6" branch="false"/>
-						<line number="42" hits="9" branch="false"/>
+						<line number="42" hits="13" branch="false"/>
 					</lines>
 				</class>
 				<class name="com.tw.biblioteca.WelcomeMessage" filename="com/tw/biblioteca/WelcomeMessage.java" line-rate="1.0" branch-rate="1.0" complexity="1.0">
