--- a/reports/coverage-summary.xml
+++ b/reports/coverage-summary.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0"?>
 <!DOCTYPE coverage SYSTEM "http://cobertura.sourceforge.net/xml/coverage-04.dtd">
 
-<coverage line-rate="0.979381443298969" branch-rate="0.9" lines-covered="190" lines-valid="194" branches-covered="72" branches-valid="80" complexity="2.2857142857142856" version="2.1.1" timestamp="1442511774247">
+<coverage line-rate="0.9804878048780488" branch-rate="0.8953488372093024" lines-covered="201" lines-valid="205" branches-covered="77" branches-valid="86" complexity="2.27027027027027" version="2.1.1" timestamp="1442515006186">
 	<packages />
 </coverage>
